Fixing font spacing

--- a/src/PitchChart/PitchChart.css
+++ b/src/PitchChart/PitchChart.css
@@ -10,5 +10,5 @@
 
 .pitch-chart canvas {
   width: 100%;
-  height: 500px;
+  height: 650px;
 }
